# rl-drug-dosage-ppo

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: tests.yml
models/: agent.pt
src/rl_drug_dosage/: __init__.py  __main__.py  cli.py
src/rl_drug_dosage/agents/: __init__.py  base.py  continuous.py
src/rl_drug_dosage/envs/: __init__.py  drug_dose.py
src/rl_drug_dosage/evaluation/: __init__.py  rollout.py
src/rl_drug_dosage/training/: __init__.py  ppo_continuous.py
src/rl_drug_dosage/utils/: __init__.py  wandb_utils.py
tests/: __init__.py  test_evaluation.py  test_wandb_utils.py
