[build-system]
build-backend = "uv_build"
requires = [ "uv-build>=0.7" ]

[project]
name = "rl-drug-dosage"
version = "0.2.0"
description = "Reinforcement Learning for Drug Dosage Control using PPO"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12,<3.14"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "gymnasium>=0.29",
  "matplotlib>=3.7",
  "numpy>=1.24",
  "rich>=13",
  "tensorboard>=2.14",
  "torch>=2",
  "typer>=0.9",
]

optional-dependencies.dev = [
  "pyrefly",
  "pytest>=7",
  "pytest-cov>=4",
  "ruff>=0.1",
]
optional-dependencies.wandb = [ "wandb>=0.15" ]
urls.Repository = "https://github.com/layanemerhi/rl-drug-dosage-poc"
scripts.rl-drug-dosage = "rl_drug_dosage.cli:app"

[tool.ruff]
target-version = "py311"
line-length = 100
select = [ "E", "F", "I", "N", "W", "UP" ]
